SERVER-83955 Fix wrong warning messages in ReplSetGetStatus command (#17731)

GitOrigin-RevId: ccd5461628c5aec1537f0a92543e557de67cb69a